--- a/tvb/basic/logger/library_logger.conf
+++ b/tvb/basic/logger/library_logger.conf
@@ -43,7 +43,7 @@ qualname=tvb.basic.config
 propagate=0
 
 [logger_tvb_simulator]
-level=WARNING
+level=INFO
 handlers=consoleHandler, fileHandler
 qualname=tvb.simulator
 propagate=0
@@ -54,7 +54,8 @@ propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=ERROR
+level=INFO
+#level=ERROR
 formatter=simpleFormatter
 args=(sys.stdout,)
 
